--- a/Installations.htm
+++ b/Installations.htm
@@ -15,6 +15,8 @@
 <li>There are also a few ways to install Git on Windows. The most official build is available for download on the Git website.</li>
 <li>Just go to https://git-scm.com/download/win and the download will start automatically. </li>
 
+<h1>Change in Installings</h1>
+
 <li>Change No 01</li>
 </ul>
 
