Updated index.html. New heading

--- a/index.htm
+++ b/index.htm
@@ -10,5 +10,8 @@ What is Version Control System: A version control system, or VCS, tracks the his
 Hi, My name is Adeel. I am a student in Software Engineering.
 </P>
 
+
+<h1>New Changes</h1>
+
 </body>
 </html>
